--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "andremadarang",
+  "name": "nilay-shah-portfolio",
   "private": true,
   "scripts": {
     "build": "gridsome build",
