--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gridsome/vue-remark": "^0.2.2",
     "axios": "^0.19.2",
     "gridsome": "^0.7.18",
+    "gridsome-plugin-pwa": "^0.0.18",
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "gridsome-plugin-rss": "^1.2.0",
     "vue-fuse": "^2.2.1",
