--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-scrollto": "^2.18.1"
   },
   "devDependencies": {
+    "gridsome-plugin-manifest": "^0.3.5",
     "gridsome-plugin-tailwindcss": "^3.0.1"
   }
 }
