--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
-media_folder: "static/uploads" # Media files will be stored in the repo under images/uploads
-public_folder: "../static/uploads" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "blog/images" # Media files will be stored in the repo under images/uploads
+public_folder: "images" # The src attribute for uploaded media will begin with /images/uploads
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
